# search-ads

./: .gitignore  CLAUDE.md  README.md  TAURI_IMPLEMENTATION_PLAN.md  install.sh  launch.sh  plan.md  pyproject.toml  requirements.txt  search-ads-server.spec  shell.nix  webui_design.md
.claude/skills/: cli-commands.md  development.md  project-overview.md  release-macos.md  search-cite.md  web-api.md
docs/: release.md
frontend/: .eslintrc.cjs  index.html  package.json  vite.config.ts
frontend/src/: index.css  main.tsx  routeTree.gen.tsx  tauri.d.ts
frontend/src/components/: AssistantInsights.tsx  StartupGuard.tsx
frontend/src/components/layout/: Header.tsx  Sidebar.tsx
frontend/src/hooks/: useLaTeX.ts  useNotes.ts  usePapers.ts  useProjects.ts  useSearch.ts  useStats.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: GraphPage.tsx  HomePage.tsx  ImportPage.tsx  LibraryPage.tsx  PaperDetailPage.tsx  SearchPage.tsx  SettingsPage.tsx  WritingPage.tsx  index.ts
frontend/src/store/: index.ts
openclaw-skill/: README.md  SKILL.template.md  install.sh
openclaw-skill/scripts/: sync_insights.py
scripts/: benchmark_search_db.py  build-sidecar.sh  bump_version.py  issues.md  list_models.py
src/: server_entry.py
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/binaries/: search-ads-server-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/search-ads-server/_internal/: libbz2.1.dylib  libcrypt.2.dylib  libexpat.1.dylib  libffi.7.dylib  liblzma.5.dylib  libmpdec.4.dylib  libncursesw.6.dylib  libpython3.10.dylib  libreadline.8.dylib  libsqlite3.dylib  libssl.3.dylib  libz.dylib
src-tauri/resources/search-ads-server/_internal/jsonschema-4.26.0.dist-info/: RECORD
src-tauri/resources/search-ads-server/_internal/numpy-2.2.6.dist-info/: RECORD
src-tauri/resources/search-ads-server/_internal/onnxruntime-1.23.2.dist-info/: RECORD
src-tauri/resources/search-ads-server/_internal/websockets-16.0.dist-info/: RECORD
src-tauri/src/: lib.rs  main.rs
src/cli/: main.py
src/core/: __init__.py  ads_client.py  citation_engine.py  config.py  latex_parser.py  llm_client.py  pdf_handler.py
src/db/: __init__.py  models.py  repository.py  vector_store.py
src/web/: dependencies.py  main.py
src/web/routers/: __init__.py  ai.py  assistant.py  citations.py  import_.py  latex.py  notes.py  papers.py  pdf.py  projects.py  search.py  settings.py
src/web/schemas/: __init__.py  common.py  paper.py  project.py  search.py
tests/: conftest.py  repro_phase_4_2_5.py  test_citation_export.py  test_latex_api.py  test_llm_robustness.py  test_papers_api.py  test_papers_api_sorting.py  test_search_api.py  test_search_pagination.py  verify_embedding.py
tests/llm/: test_ai_router.py  test_client.py  test_gemini.py  test_providers.py  test_vector_store.py
tests/web/routers/: test_assistant_api.py  test_graph.py  test_pdf_api.py  test_settings_models.py
(+9 files in other folders)
