[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "search-ads"
version = "0.8.0-beta"
description = "CLI tool for automating scientific paper citations using NASA ADS"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<3.15"
authors = [
    { name = "Pan", email = "pan@example.com" }
]
keywords = ["astronomy", "citations", "latex", "ads", "bibliography"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Astronomy",
]

dependencies = [
    # CLI
    "typer>=0.9.0",
    "rich>=13.0.0",

    # Database
    "sqlmodel>=0.0.14",
    "sqlalchemy>=2.0.0",

    # ADS API
    "ads>=0.12.6",
    "requests>=2.31.0",

    # LLM APIs (for context analysis and ranking)
    "openai>=1.0.0",
    "anthropic>=0.40.0",
    "google-genai>=1.0.0",

    # Vector store
    "chromadb>=0.4.0",

    # PDF parsing
    "pymupdf>=1.23.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # Web UI
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
]

[project.urls]
Homepage = "https://github.com/kuochuanpan/search-ads"
Repository = "https://github.com/kuochuanpan/search-ads"
Issues = "https://github.com/kuochuanpan/search-ads/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
search-ads = "src.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
